# simplearchiver

./: .gitignore  CMakeCache.txt  Makefile  README.md  cmake_install.cmake
src/: CMakeLists.txt  Makefile  archiver.c  archiver.h  main.c
testdirs/testdir1/: important.txt
